@@ -17,16 +17,12 @@ import ch.ivyteam.ivy.vars.Variable;
 public final class VariableUtils {
 
   public static List<AzureAiDeployment> getDeployments() {
-    List<Variable> deploymentVariables = Ivy.var().all().stream()
-        .filter(variable -> variable.name().startsWith(AzureOpenAiConf.DEPLOYMENTS))
-        .filter(variable -> !variable.name().equals(AzureOpenAiConf.DEPLOYMENTS)).collect(Collectors.toList());
-
-    if (deploymentVariables.size() == 0) {
-      return null;
+    var deploymentVars = deploymentsVars();
+    if (deploymentVars.isEmpty()) {
+      return List.of();
     }
-
     Map<String, AzureAiDeployment> deploymentMap = new HashMap<>();
-    for (Variable variable : deploymentVariables) {
+    for (Variable variable : deploymentVars) {
       String[] parts = variable.name().split("\\.");
       if (parts.length == 6) {
         String deploymentName = parts[4];
@@ -43,7 +39,14 @@ public final class VariableUtils {
 
     return deploymentMap.values().stream()
         .filter(deployment -> deployment.getName() != null && !deployment.getName().isEmpty())
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  public static List<Variable> deploymentsVars(){
+    return Ivy.var().all().stream()
+        .filter(variable -> variable.name().startsWith(AzureOpenAiConf.DEPLOYMENTS))
+        .filter(variable -> !variable.name().equals(AzureOpenAiConf.DEPLOYMENTS))
+        .toList();
   }
 
   public static AzureAiDeployment getDeploymentByName(String deploymentName) {
